// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Labels render correctly with data should render badges with More labels link 1`] = `
Array [
  <div
    className=""
    key="label_0"
  >
    <Label
      key="label_0"
      name="app"
      value="bookinfo"
    />
  </div>,
  <div
    className=""
    key="label_1"
  >
    <Label
      key="label_1"
      name="version"
      value="v1"
    />
  </div>,
  <div
    className=""
    key="label_2"
  >
    <Label
      key="label_2"
      name="env"
      value="prod"
    />
  </div>,
  <div
    className="hide"
    key="label_3"
  >
    <Label
      key="label_3"
      name="team"
      value="A"
    />
  </div>,
  <a
    className="fqiflux"
    onClick={[Function]}
  >
     
    More labels...
  </a>,
]
`;

exports[`#Labels render correctly with data should render badges without More labels link 1`] = `
Array [
  <div
    className=""
    key="label_0"
  >
    <Label
      key="label_0"
      name="app"
      value="bookinfo"
    />
  </div>,
  <div
    className=""
    key="label_1"
  >
    <Label
      key="label_1"
      name="version"
      value="v1"
    />
  </div>,
  "",
]
`;
